Changed Java project to a Maven project